[project]
name = "mlops-zoomcamp"
author = "@evansdoe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "pandera>=0.23.1",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.4",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
